# reaxkit

./: .gitignore  AUTHORS.md  CITATION.cff  LICENSE  README.md  _gen_mkdocs.py  folder_structure.md  folder_structure_gen.py  mkdocs.yml  pyproject.toml  requirements_all.txt  serve_docs.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: docs.yml  pypi.yml
docs/: architecture_overview.md  contributing.md  docstring_update_rules.yaml  getting_started.md  hooks.py  index.md  installation.md  quickstart.md  resources.md  template_for_adding_figures_to_docs_md_files.md
docs/api/: cli.md  index.md
docs/examples/: README.md  connectivity_multifile_example.py  gen_plot_presentation_example.py  multi_engine_get_msd_cli_blueprint.py  multi_engine_msd_cli_blueprint.py  plotter_meta_example.py  xmolout_basic_example.py  xmolout_fort7_example.py
docs/file_templates/: docstring_inclusion_rules.md  docstrings.md  index.md  template_analyzer.py  template_generator.py  template_handler.py  template_utils.py  template_workflow.py
docs/for_developers/: index.md  reaxkit_folder_structure_and_data_models.md
docs/reaxff_reference/: index.md
docs/resources/: reference_material.md
docs/rules_and_conventions/: docstring_content_and_inclusion_guidelines.md  docstring_update_rules.md  docstring_update_rules.yaml  index.md  workflow_cli_doc_rules.yaml  workflow_cli_documentation_rules.md  workflow_module_structure_and_design_rules.md  workflow_module_structure_and_design_rules.yaml
docs/scripts/: generate_analysis_task_docs.py  generate_engine_function_docs.py  generate_utils_function_docs.py  generate_workflow_cli_docs.py
docs/stylesheets/: extra.css
docs/tutorials/: 01_understanding_quickstart.md  02_atom_property_and_video_workflows.md  02_xmolout_fort7_coordination.md  03_eregime_generator.md  04_gen_plot_workflow.md  04_plotter_meta_workflow.md  index.md
examples/: AlN.poscar  AlN_1-100_slab_4x4.xyz  AlN_ortho.cif  aggregated_data.csv  base.xyz  control_test.ipynb  df_local.csv  df_total.csv  df_total_all.csv  electrostatics_test.py  eregime_test.ipynb  ev_5_62.csv  ffield  ffield_test.ipynb  fort.73  fort.74  fort.79.csv  fort.79_diff.csv  fort.99  fort73_test.ipynb  fort74_test.ipynb  fort79_test.ipynb  fort7_test.ipynb  fort99_data.csv  fort99_sorted.csv  fort99_test.ipynb  full_data.csv  geo  geo_test.ipynb  hyst.csv  hysteresis_full_data.csv  hysteresis_summary.txt  local_frame10.csv  molfra_largest_molecules.csv  molfra_test.ipynb  molfra_totals.csv  params  params_test.ipynb  place2_geo  place2_no_base.xyz  (+16 more)
examples/output_folder/: trainset_energy.csv
examples/trainset_analysis/: trainset_charge.csv  trainset_energy.csv  trainset_trimmed_energy.csv
examples/xma_test_outputs/: atom_types_frame0.json  box_dimensions.csv  msd_atom0.csv  rdf_frame0_ovito.csv  rdf_props_summary.csv  traj_atom0.csv
src/analyzers/: __init__.py  dihedral.py
src/reaxkit/: README.md  README_FORMAT.yaml  cli.py  count_loc.py  introspection.py  loc_report.csv
tests/: test_active_site_workflow.py  test_alias_resolution.py  test_cache_manager.py  test_cli_direct_commands.py  test_engine_resolution_paths.py  test_eregime_generator.py  test_ffield_add_element.py  test_layered_architecture.py  test_presentation_dispatcher.py  test_storage_layout.py  test_timeseries_workflow.py  test_trajectory_workflow.py  test_workflow_result_bundle.py  test_xmolout_handler.py
tests/analysis_tasks/: test_active_site_defect_schema_unit.py  test_active_site_edge_typing_unit.py  test_active_site_events.py  test_active_site_structural.py  test_active_site_structural_tract_parity_unit.py  test_bond_events.py  (+49 more)
(+920 files in other folders)
