[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaxkit"
version = "0.1.0"
description = "A toolkit for parsing, analyzing, and visualizing ReaxFF simulation data."
authors = "AUTHORS.md"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm",
    "rich",
    "freud-analysis",
    "ovito",
    "tabulate",
    "ase",
    "imageio",
    "mp_api",
    "PyYAML",
    "rapidfuzz",
]

[project.scripts]
reaxkit = "reaxkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reaxkit = ["**/*.yaml"]

