[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaxkit"
version = "1.0.0"
description = "A toolkit for parsing, analyzing, and visualizing ReaxFF simulation data."
authors = [
  { name = "Ali Mohammadi", email = "alimohammadi2265@gmail.com" },
  { name = "Adri van Duin", email = "acv13@psu.edu" },
  { name = "Yun Kyung Shin", email = "yks2@psu.edu" },
  { name = "Alireza Sepehrinezhad", email = "alireza.sepehri@psu.edu" },
]
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm",
    "rich",
    "freud-analysis",
    "tabulate",
    "ase",
    "imageio",
    "mp_api",
    "PyYAML",
    "rapidfuzz",
]

[project.optional-dependencies]
ovito = ["ovito"]

[project.scripts]
reaxkit = "reaxkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reaxkit = ["**/*.yaml"]

